<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple ToDo</string>
    <string name="settings">Settings</string>
    <string name="to_do">To-Do</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved</string>
    <string name="empty_todo_list_desc">You don\'t have things to do.</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="filters">Filters</string>
    <string name="empty_todo_list_desc_completed">You haven\'t completed any task.</string>
    <string name="empty_todo_list_desc_pending">You have no pending tasks.</string>
    <string name="backup_success">File saved successfully!</string>
    <string name="backup_error">Error saving file!</string>
    <string name="delete_completed_tasks_advertisement">Are you sure you want to delete all completed tasks?</string>
    <string name="new_to_do">New To-Do</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="todos_count">Pending(s)</string>
    <string name="edit">Edit</string>
    <string name="edit_todo_desc">Edit To-Do</string>
    <string name="dialog_add_reg_error">Fill this space!</string>
    <string name="reg_created_timestamp">Created:</string>
    <string name="dialog">Dialog</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="dark_light_mode">Theme</string>
    <string name="dark_light_mode_desc_system">System default</string>
    <string name="dark_light_mode_desc_dark">Dark</string>
    <string name="dark_light_mode_desc_light">Light</string>
    <string name="app_language">App language</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_desc">Turn on/Turn off vibration using the app.</string>
    <string name="choose_theme">Choose theme</string>
    <string name="ok">OK</string>
    <string name="system_default_desc">System default</string>
    <string name="dark_desc">Dark</string>
    <string name="light_desc">Light</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="made_by">Made by</string>
    <string name="rilis_entertainment">Rilis Entertainment</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="languages">Languages</string>
    <string name="en_desc">en</string>
    <string name="es_desc">es</string>
    <string name="your_lists">Your lists</string>
    <string name="list">List</string>
    <string name="plus">Plus</string>
    <string name="list_name">List name</string>
    <string name="settings_to_do">Settings | To-Do</string>
    <string name="restore">Restore</string>
    <string name="todo_restore_desc">Restore your lists from your internal storage.</string>
    <string name="todo_backup_desc">Save your lists in a safe place in your internal storage.</string>
    <string name="backup">Backup</string>
    <string name="settings_todo_desc">Backup and restore your lists.</string>
    <string name="list_restored">Lists restored!</string>
    <string name="list_backup_warn">Lists are empty!</string>
    <string name="list_restore_warn">Wrong archive!</string>
    <string name="reminder_notifications">Reminder notifications</string>
    <string name="pending_tasks">You have pending task(s):</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Turn on/Turn off notifications.</string>
    <string name="not_delete_completed_warning">You don\'t have any completed tasks on this list to delete.</string>
    <string name="delete_list_advertisement">If you delete this list, it cannot be restored again and all tasks related to it will be deleted. Are you sure you want to delete this list?</string>
</resources>