<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_main_dialogs"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/choose_theme"
        android:textColor="@color/top_txt2"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="18dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgThemes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/rbThemeSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:contentDescription="@string/system_default_desc"
                android:paddingHorizontal="12dp"
                android:text="@string/dark_light_mode_desc_system"
                android:textColor="@color/main_txt4"
                android:textSize="16sp"
                app:buttonTint="@color/top_txt3" />

            <RadioButton
                android:id="@+id/rbThemeDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:contentDescription="@string/dark_desc"
                android:paddingHorizontal="12dp"
                android:text="@string/dark_light_mode_desc_dark"
                android:textColor="@color/main_txt4"
                android:textSize="16sp"
                app:buttonTint="@color/top_txt3" />

            <RadioButton
                android:id="@+id/rbThemeLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:contentDescription="@string/light_desc"
                android:paddingHorizontal="12dp"
                android:text="@string/dark_light_mode_desc_light"
                android:textColor="@color/main_txt4"
                android:textSize="16sp"
                app:buttonTint="@color/top_txt3" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:gravity="center|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogThemeCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="18dp"
            android:text="@string/cancel"
            android:textColor="@color/main_txt1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDialogThemeOK"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="18dp"
            android:text="@string/ok"
            android:textColor="@color/main_txt1"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>