<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_main_dialogs"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/delete"
        android:textColor="@color/top_txt2"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="18dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="4dp"
            android:paddingHorizontal="20dp"
            android:text="@string/delete_list_advertisement"
            android:textColor="@color/main_txt4"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="18dp"
            android:paddingVertical="18dp"
            android:text="@string/cancel"
            android:textColor="@color/main_txt1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDialogDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="18dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>