<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_main_dialogs"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogTodoTopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_do"
        android:textColor="@color/top_txt2"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="25dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialogTodoDescLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:autofillHints="@null"
            android:background="@drawable/shape_search_bar"
            android:inputType="text"
            android:textColorHint="@color/main_txt12"
            android:textSize="16sp"
            app:boxStrokeColor="@color/primaryColor"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:cursorColor="@color/primaryColor"
            app:cursorErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextColor="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialogTodoDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/description"
                android:inputType="textCapSentences"
                android:textColor="@color/main_txt7" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/acListAutoCompleteParent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:background="@drawable/shape_search_bar"
                android:textColorHint="@color/main_txt12"
                android:textSize="16sp"
                app:boxStrokeColor="@color/primaryColor"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/primaryColor">

                <AutoCompleteTextView
                    android:id="@+id/acListAutoComplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:popupTheme="@style/Popup_Menu"
                    android:hint="@string/list"
                    android:inputType="none"
                    android:textColor="@color/main_txt7" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivAddNewList"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_plus"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:contentDescription="@string/plus"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/dialogAddTodoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="78dp"
        android:backgroundTint="@color/primaryColor"
        android:paddingVertical="12dp"
        android:text="@string/add"
        android:textColor="@color/secondaryColor"
        android:textSize="18sp" />

</LinearLayout>