<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bottom_dialog"
    android:orientation="vertical">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:layout_gravity="center|bottom"
        android:contentDescription="@string/dialog"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_minus"
        app:tint="@color/top_txt2" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="88dp"
        android:layout_marginVertical="20dp"
        android:autofillHints="@null"
        android:background="@drawable/shape_search_bar"
        android:inputType="text"
        android:textColor="@color/main_txt7"
        android:textColorHint="@color/main_txt12"
        android:textSize="14sp"
        app:boxStrokeColor="@color/primaryColor"
        app:boxStrokeErrorColor="@color/red"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="@color/primaryColor"
        app:cursorErrorColor="@color/red"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:hintTextColor="@color/primaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDialogAddList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/list_name"
            android:inputType="textCapSentences"
            android:textColor="@color/main_txt7" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDialogAddListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="78dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primaryColor"
        android:paddingVertical="12dp"
        android:text="@string/add"
        android:textColor="@color/secondaryColor"
        android:textSize="18sp" />

</LinearLayout>